# custom-logger

./: .gitignore  README.md  pyproject.toml
examples/: example1.py
src/: custom_logger.py
src/custom_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
